deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springbootapi-deployment
  labels:
    app: springbootapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springbootapi
  template:
    metadata:
      labels:
        app: springbootapi
    spec:
      containers:
        - name: springbootapi
          image: miixo22/springbootapi-app:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
