service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springbootapi-service
spec:
  selector:
    app: springbootapi
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
type: ClusterIP
